--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,10 @@ android {
     }
 }
 dependencies {
-
+//    implementation 'com.synnapps:carouselview:0.1.5'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+//    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+//    implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -45,5 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+
+
 
 }
